# Basic-OpenGL-Renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Roadmap.txt
EdGL/: CMakeLists.txt
EdGL/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  ErrorHandler.cpp  ErrorHandler.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Util.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  Window.cpp  Window.h
Sandbox/: CMakeLists.txt
Sandbox/res/Models/TNT CRATE/: TNT_CRATE.mtl
Sandbox/res/Models/floor/: floor.mtl
Sandbox/res/Shaders/: base_material_fs.glsl  debug_normals_fs.glsl  debug_uv_fs.glsl  light_fs.glsl  light_vs.glsl  multi_light_fs.glsl  simple_fs.glsl  simple_vs.glsl
Sandbox/src/: SandboxApp.cpp  SandboxApp.h  main.cpp  main2.cpp
